@@ -104,12 +104,8 @@ public class TranscriptionResponseMapper {
         List<TranscriptionCommentEntity> migratedTranscriptionComments
     ) {
 
-        List<GetTranscriptionWorkflowsResponse> result = new ArrayList<>();
-
-        List<GetTranscriptionWorkflowsResponse> responseFromTranscriptionWorkflows = transcriptionWorkflowEntities.stream()
-            .map(this::mapToTranscriptionWorkflows)
-            .toList();
-        result.addAll(responseFromTranscriptionWorkflows);
+        List<GetTranscriptionWorkflowsResponse> result = new ArrayList<>(
+            transcriptionWorkflowEntities.stream().map(this::mapToTranscriptionWorkflows).toList());
 
         var responseFromMigratedComments = migratedTranscriptionComments.stream().map(this::mapMigratedCommentToTranscriptionWorkflows).toList();
         result.addAll(responseFromMigratedComments);
@@ -153,7 +149,7 @@ public class TranscriptionResponseMapper {
     }
 
     private Comparator<GetTranscriptionWorkflowsResponse> byTranscriptionWorkflowTs() {
-        return Comparator.comparing(workflow -> ObjectUtils.defaultIfNull(workflow.getWorkflowTs(), OffsetDateTime.MIN));
+        return comparing(workflow -> ObjectUtils.defaultIfNull(workflow.getWorkflowTs(), OffsetDateTime.MIN));
     }
 
     public GetTranscriptionByIdResponse mapToTranscriptionResponse(TranscriptionEntity transcriptionEntity) {
@@ -203,7 +199,7 @@ public class TranscriptionResponseMapper {
             transcriptionDocumentEntity -> transcriptionResponse.setTranscriptFileName(transcriptionDocumentEntity.getFileName()));
 
         if (CollectionUtils.isNotEmpty(transcriptionEntity.getHearings())) {
-            HearingEntity hearing = transcriptionEntity.getHearings().get(0);
+            HearingEntity hearing = transcriptionEntity.getHearings().getFirst();
             transcriptionResponse.setHearingId(hearing.getId());
             transcriptionResponse.setHearingDate(hearing.getHearingDate());
         } else {
@@ -316,7 +312,7 @@ public class TranscriptionResponseMapper {
     private OffsetDateTime mapToTranscriptionWorkflowsApprovedTimestamp(List<TranscriptionWorkflowEntity> transcriptionWorkflowEntities) {
         Optional<TranscriptionWorkflowEntity> transcriptionWorkflowEntity = transcriptionWorkflowEntities.stream()
             .filter(trw -> TranscriptionStatusEnum.APPROVED.getId().equals(trw.getTranscriptionStatus().getId()))
-            .max(Comparator.comparing(TranscriptionWorkflowEntity::getWorkflowTimestamp));
+            .max(comparing(TranscriptionWorkflowEntity::getWorkflowTimestamp));
 
         return transcriptionWorkflowEntity.map(TranscriptionWorkflowEntity::getWorkflowTimestamp).orElse(null);
     }
@@ -330,30 +326,14 @@ public class TranscriptionResponseMapper {
         transformedMediaDetails.isHidden(transcriptionDocumentResponse.isHidden());
 
         // prioritise the case from the hearing
-        if (transcriptionDocumentResponse.hearingCaseId() != null) {
-            SearchTranscriptionDocumentResponseCase caseResponse = new SearchTranscriptionDocumentResponseCase();
-            caseResponse.setId(transcriptionDocumentResponse.hearingCaseId());
-            caseResponse.setCaseNumber(transcriptionDocumentResponse.hearingCaseNumber());
-            transformedMediaDetails.setCase(caseResponse);
-        } else {
-            SearchTranscriptionDocumentResponseCase caseResponse = new SearchTranscriptionDocumentResponseCase();
-            caseResponse.setId(transcriptionDocumentResponse.caseId());
-            caseResponse.setCaseNumber(transcriptionDocumentResponse.caseNumber());
-            transformedMediaDetails.setCase(caseResponse);
-        }
+        SearchTranscriptionDocumentResponseCase caseResponse = getSearchTranscriptionDocumentResponseCase(
+            transcriptionDocumentResponse);
+        transformedMediaDetails.setCase(caseResponse);
 
         // prioritise the courthouse that is connected to the hearing
-        if (transcriptionDocumentResponse.hearingCourthouseId() != null) {
-            SearchTranscriptionDocumentResponseCourthouse courthouseResponse = new SearchTranscriptionDocumentResponseCourthouse();
-            courthouseResponse.setId(transcriptionDocumentResponse.hearingCourthouseId());
-            courthouseResponse.setDisplayName(transcriptionDocumentResponse.hearingCourthouseDisplayName());
-            transformedMediaDetails.setCourthouse(courthouseResponse);
-        } else {
-            SearchTranscriptionDocumentResponseCourthouse courthouseResponse = new SearchTranscriptionDocumentResponseCourthouse();
-            courthouseResponse.setId(transcriptionDocumentResponse.courthouseId());
-            courthouseResponse.setDisplayName(transcriptionDocumentResponse.courthouseDisplayName());
-            transformedMediaDetails.setCourthouse(courthouseResponse);
-        }
+        SearchTranscriptionDocumentResponseCourthouse courthouseResponse = getSearchTranscriptionDocumentResponseCourthouse(
+            transcriptionDocumentResponse);
+        transformedMediaDetails.setCourthouse(courthouseResponse);
 
         if (transcriptionDocumentResponse.hearingId() != null) {
             SearchTranscriptionDocumentResponseHearing hearingResponse = new SearchTranscriptionDocumentResponseHearing();
@@ -363,6 +343,32 @@ public class TranscriptionResponseMapper {
         }
 
         return transformedMediaDetails;
+    }
+
+    private static SearchTranscriptionDocumentResponseCourthouse getSearchTranscriptionDocumentResponseCourthouse(
+        TranscriptionDocumentResult transcriptionDocumentResponse) {
+        SearchTranscriptionDocumentResponseCourthouse courthouseResponse = new SearchTranscriptionDocumentResponseCourthouse();
+        if (transcriptionDocumentResponse.hearingCourthouseId() != null) {
+            courthouseResponse.setId(transcriptionDocumentResponse.hearingCourthouseId());
+            courthouseResponse.setDisplayName(transcriptionDocumentResponse.hearingCourthouseDisplayName());
+        } else {
+            courthouseResponse.setId(transcriptionDocumentResponse.courthouseId());
+            courthouseResponse.setDisplayName(transcriptionDocumentResponse.courthouseDisplayName());
+        }
+        return courthouseResponse;
+    }
+
+    private static SearchTranscriptionDocumentResponseCase getSearchTranscriptionDocumentResponseCase(
+        TranscriptionDocumentResult transcriptionDocumentResponse) {
+        SearchTranscriptionDocumentResponseCase caseResponse = new SearchTranscriptionDocumentResponseCase();
+        if (transcriptionDocumentResponse.hearingCaseId() != null) {
+            caseResponse.setId(transcriptionDocumentResponse.hearingCaseId());
+            caseResponse.setCaseNumber(transcriptionDocumentResponse.hearingCaseNumber());
+        } else {
+            caseResponse.setId(transcriptionDocumentResponse.caseId());
+            caseResponse.setCaseNumber(transcriptionDocumentResponse.caseNumber());
+        }
+        return caseResponse;
     }
 
     public List<SearchTranscriptionDocumentResponse> mapSearchTranscriptionDocumentResults(List<TranscriptionDocumentResult> entityList) {
@@ -406,7 +412,7 @@ public class TranscriptionResponseMapper {
             return null;
         }
 
-        var action = entity.getAdminActions().get(0); // assume only 1 exists
+        var action = entity.getAdminActions().getFirst(); // assume only 1 exists
         return new AdminAction()
             .comments(action.getComments())
             .id(action.getId())
@@ -468,7 +474,7 @@ public class TranscriptionResponseMapper {
 
         AdminAction adminAction = buildAdminAction(transcriptionDocumentEntity);
 
-        // if the hearing is null then dont read any associated information
+        // if the hearing is null then don't read any associated information
         if (transcriptionDocumentEntity.getTranscription().getHearing() != null) {
             CaseResponseDetails caseResponseDetails = new CaseResponseDetails();
             caseResponseDetails.setId(transcriptionDocumentEntity.getTranscription().getHearing().getCourtCase().getId());
